@@ -12,6 +12,7 @@ For a complete change history, please see the Subversion log comments.
 
 Current Version (SVN Trunk):
 ---------------------------
+- AGG: speed up rendering of pixmap marker symbols
 
 - Implement OGR thread-safety via use of an OGR lock (#1977).
 
